--- a/src/styles/Recommended_movies.css
+++ b/src/styles/Recommended_movies.css
@@ -198,7 +198,7 @@
   }
   
   .recommendations-grid {
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(231px, 1fr));
     gap: 10px;
   }
 }
